@@ -1,3 +1,7 @@
+2008-09-19  Aaron Bockover  <abock@gnome.org>
+
+	* POTFILES.in: Updated
+
 2008-09-18  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
